// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadTermsAndConditions should render checked if terms and conditions accepted 1`] = `
<ForwardRef(FormControlLabel)
  control={
    <ForwardRef(Checkbox)
      checked={true}
      inputProps={
        Object {
          "data-analyticsid": "terms-and-conditions-input",
          "data-testid": "terms-and-conditions-input",
          "id": "terms-and-conditions-input",
        }
      }
      onChange={[Function]}
      sx={[Function]}
    />
  }
  disabled={false}
  label={
    <ForwardRef(Typography)
      color="secondary"
      fontSize={16}
      fontWeight={300}
      lineHeight="24px"
      pt="10px"
      textAlign="justify"
    />
  }
  sx={
    Object {
      "alignItems": "flex-start",
      "margin": 0,
    }
  }
/>
`;

exports[`Component FileUploadTermsAndConditions should render default view 1`] = `
<ForwardRef(FormControlLabel)
  control={
    <ForwardRef(Checkbox)
      checked={false}
      inputProps={
        Object {
          "data-analyticsid": "terms-and-conditions-input",
          "data-testid": "terms-and-conditions-input",
          "id": "terms-and-conditions-input",
        }
      }
      onChange={[Function]}
      sx={[Function]}
    />
  }
  disabled={false}
  label={
    <ForwardRef(Typography)
      color="error"
      fontSize={16}
      fontWeight={300}
      lineHeight="24px"
      pt="10px"
      textAlign="justify"
    />
  }
  sx={
    Object {
      "alignItems": "flex-start",
      "margin": 0,
    }
  }
/>
`;
